--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>frontend</td><td>RegistrationTest.verifyRegistartionWithValidCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]<br/>RegistrationTest.verifySignUpWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]<br/>RegistrationTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]<br/></td></tr>
-<tr><td>regression</td><td>RegistrationTest.verifyRegistartionWithValidCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
