--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6f6598">  <td>22/02/28 10:52:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithValidCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">verifyRegistartionWithValidCredentials</td> 
-  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/02/28 10:52:50</td>   <td>15034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/02/28 10:52:50</td>   <td>15034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/02/28 10:52:50</td>   <td>15034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/02/28 10:52:50</td>   <td>15034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/02/28 10:52:54</td>   <td>19242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AutomationExcerciseHomePageTests@5f71c76a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="6f6598">  <td>22/02/28 10:52:45</td>   <td>10365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserCreation()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">verifyUserCreation</td> 
-  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/02/28 10:52:50</td>   <td>15034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="6f6598">  <td>22/02/28 10:52:40</td>   <td>5236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifySignUpWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">verifySignUpWithEmptyCredentials</td> 
-  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="688db1">  <td>22/02/28 10:52:50</td>   <td>15064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationExcerciseHomePageTests.verifyPageTitle()[pri:0, instance:com.qa.testscripts.AutomationExcerciseHomePageTests@5f71c76a]">verifyPageTitle</td> 
-  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="6f6598">  <td>22/02/28 10:52:21</td>   <td>-13672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyPageTitle()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">verifyPageTitle</td> 
-  <td>main@1704064279</td>   <td></td> </tr>
-<tr bgcolor="6f6598">  <td>22/02/28 10:52:29</td>   <td>-5306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.RegistrationTest@10d59286]">verifyRegistartionWithInvalidEmail</td> 
-  <td>main@1704064279</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/02/28 23:49:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@544a2ea6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1816089958</td>   <td></td> </tr>
+<tr bgcolor="95a785">  <td>22/02/28 23:49:30</td>   <td>-6608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistrationWithExistingUser(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@544a2ea6]">verifyRegistrationWithExistingUser</td> 
+  <td>main@1816089958</td>   <td></td> </tr>
 </table>
