--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af6be2">  <td>22/02/28 23:49:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@544a2ea6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1816089958</td>   <td></td> </tr>
-<tr bgcolor="95a785">  <td>22/02/28 23:49:30</td>   <td>-6608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistrationWithExistingUser(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@544a2ea6]">verifyRegistrationWithExistingUser</td> 
-  <td>main@1816089958</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>22/03/02 10:31:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistrationWithExistingUser(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyRegistrationWithExistingUser</td> 
+  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>13641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>22/03/02 10:30:53</td>   <td>-12861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyPageTitle()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyPageTitle</td> 
+  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>22/03/02 10:30:57</td>   <td>-9182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyRegistartionWithInvalidEmail</td> 
+  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>13641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>13641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>22/03/02 10:31:00</td>   <td>-5625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithValidCredentials(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyRegistartionWithValidCredentials</td> 
+  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>13641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>22/03/02 10:31:15</td>   <td>9497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifySignUpWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifySignUpWithEmptyCredentials</td> 
+  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>13641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
 </table>
