--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,8 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.qa.testscripts.LoginTest.verifyLoginWithEmptyCredentials</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyDeleteLogin</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyRegistartionWithInvalidEmail</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyLoginWithInvalidCredentials</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyLoginWithEmptyEmailCredential</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyLoginWithValidCredential</td></tr>
 </table>
