--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,72 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a977a4">  <td>22/03/01 18:30:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.qa.testrunner.TestRunner@3f093abe]">runScenario</td> 
-  <td>main@2028036437</td>   <td></td> </tr>
-<tr bgcolor="a977a4">  <td>22/03/01 18:30:13</td>   <td>-827</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.qa.testrunner.TestRunner@3f093abe]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2028036437</td>   <td></td> </tr>
-<tr bgcolor="a977a4">  <td>22/03/01 18:30:24</td>   <td>10016</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.qa.testrunner.TestRunner@3f093abe]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2028036437</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">runScenario</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">runScenario</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">runScenario</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">runScenario</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">runScenario</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:05:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">runScenario</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:04:06</td>   <td>-84496</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:01</td>   <td>-89507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:01</td>   <td>-89507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:03:43</td>   <td>-107604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:05</td>   <td>-85768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.AutomationExcerciseHomePageTests@2b71e916]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:03:43</td>   <td>-107604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:03:43</td>   <td>-107604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:03:43</td>   <td>-107604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:01</td>   <td>-89507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:03:43</td>   <td>-107604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:01</td>   <td>-89507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:01</td>   <td>-89507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:01</td>   <td>-89507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6faea6">  <td>22/03/02 12:04:01</td>   <td>-89507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6f7862">  <td>22/03/02 12:05:35</td>   <td>4268</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.qa.testrunner.TestRunner@28701274]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/03/02 12:03:44</td>   <td>-106647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyDeleteLogin()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">verifyDeleteLogin</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/03/02 12:03:45</td>   <td>-105760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginShowsProperLoggedInMessage(java.util.HashMap)[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">verifyLoginShowsProperLoggedInMessage</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/03/02 12:03:51</td>   <td>-99713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">verifyLoginWithEmptyCredentials</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/03/02 12:03:55</td>   <td>-95757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithEmptyEmailCredential()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">verifyLoginWithEmptyEmailCredential</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/03/02 12:03:55</td>   <td>-95405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidCredentials()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">verifyLoginWithInvalidCredentials</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/03/02 12:03:56</td>   <td>-94494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidCredential(java.util.HashMap)[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">verifyLoginWithValidCredential</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="93938a">  <td>22/03/02 12:04:02</td>   <td>-88495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationExcerciseHomePageTests.verifyPageTitle()[pri:0, instance:com.qa.testscripts.AutomationExcerciseHomePageTests@2b71e916]">verifyPageTitle</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/03/02 12:03:14</td>   <td>-135839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyPageTitle()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">verifyPageTitle</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/03/02 12:03:58</td>   <td>-92228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.LoginTest@411f53a0]">verifyRegistartionWithInvalidEmail</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/03/02 12:03:19</td>   <td>-131473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">verifyRegistartionWithInvalidEmail</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/03/02 12:03:23</td>   <td>-127494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithValidCredentials(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">verifyRegistartionWithValidCredentials</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/03/02 12:03:32</td>   <td>-118189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistrationWithExistingUser(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">verifyRegistrationWithExistingUser</td> 
+  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/03/02 12:03:38</td>   <td>-112393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifySignUpWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@2a3b5b47]">verifySignUpWithEmptyCredentials</td> 
+  <td>main@422330142</td>   <td></td> </tr>
 </table>
