--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,32 +4,39 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.testscripts.RegistrationTest</td>
+<td>com.qa.testscripts.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPageTitle</td>
+<td>verifyLoginWithEmptyEmailCredential</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyRegistrationWithExistingUser</td>
+<td>verifyLoginShowsProperLoggedInMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyRegistartionWithValidCredentials</td>
-<td>regression frontend </td>
-</tr>
+<td>verifyLoginWithValidCredential</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySignUpWithEmptyCredentials</td>
+<td>verifyLoginWithInvalidCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDeleteLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegistartionWithInvalidEmail</td>
 <td>frontend </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyRegistartionWithInvalidEmail</td>
+<td>verifyLoginWithEmptyCredentials</td>
 <td>frontend </td>
 </tr>
 <tr>
