--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>22/03/02 10:31:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>22/03/02 10:30:53</td>   <td>-26502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyPageTitle()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyPageTitle</td> 
-  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>22/03/02 10:30:57</td>   <td>-22823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithInvalidEmail()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyRegistartionWithInvalidEmail</td> 
-  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>22/03/02 10:31:00</td>   <td>-19266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistartionWithValidCredentials(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyRegistartionWithValidCredentials</td> 
-  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>22/03/02 10:31:06</td>   <td>-13641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyRegistrationWithExistingUser(java.util.HashMap)[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifyRegistrationWithExistingUser</td> 
-  <td>main@1792550665</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>22/03/02 10:31:15</td>   <td>-4144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifySignUpWithEmptyCredentials()[pri:0, instance:com.qa.testscripts.RegistrationTest@595b007d]">verifySignUpWithEmptyCredentials</td> 
-  <td>main@1792550665</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>22/03/02 12:01:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.LoginTest@3a93b025]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@136936250</td>   <td></td> </tr>
+<tr bgcolor="93938a">  <td>22/03/02 12:01:04</td>   <td>-7820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginShowsProperLoggedInMessage(java.util.HashMap)[pri:0, instance:com.qa.testscripts.LoginTest@3a93b025]">verifyLoginShowsProperLoggedInMessage</td> 
+  <td>main@136936250</td>   <td></td> </tr>
 </table>
