--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>category</td><td>CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@35cabb2a]<br/></td></tr>
-<tr><td>frontend</td><td>CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@35cabb2a]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>brand</td><td>BrandProductTest.verifyBrandListing(java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.BrandProductTest@35cabb2a]<br/></td></tr>
+<tr><td>frontend</td><td>BrandProductTest.verifyBrandListing(java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.BrandProductTest@35cabb2a]<br/></td></tr>
 </table>
