--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,25 +4,23 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.testscripts.CategoryProductTest</td>
+<td>com.qa.testscripts.BrandProductTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySubCategorySearch</td>
-<td>category frontend </td>
-</tr>
+<td>verifyProductCountUnderEachBrands</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAllSubCategoryIsShown</td>
-<td>category frontend </td>
-</tr>
+<td>verifyAllBrandsAreListed</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAllCategoryIsShown</td>
-<td>category frontend </td>
+<td>verifyBrandListing</td>
+<td>brand frontend </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
