--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.qa.testscripts.CategoryProductTest.verifyAllCategoryIsShown</td></tr>
-<tr><td>com.qa.testscripts.CategoryProductTest.verifyAllSubCategoryIsShown</td></tr>
+<tr><td>com.qa.testscripts.BrandProductTest.verifyProductCountUnderEachBrands</td></tr>
+<tr><td>com.qa.testscripts.BrandProductTest.verifyAllBrandsAreListed</td></tr>
 </table>
