--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bf786e">  <td>22/03/03 10:07:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@35cabb2a]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bf786e">  <td>22/03/03 14:08:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.BrandProductTest@35cabb2a]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>22/03/03 10:07:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.CategoryProductTest@35cabb2a]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bf786e">  <td>22/03/03 14:08:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseDriver.tearDown()[pri:0, instance:com.qa.testscripts.BrandProductTest@35cabb2a]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="93938a">  <td>22/03/03 10:06:56</td>   <td>-7821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@35cabb2a]">verifySubCategorySearch</td> 
+<tr bgcolor="93938a">  <td>22/03/03 14:08:04</td>   <td>-7261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrandProductTest.verifyBrandListing(java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.BrandProductTest@35cabb2a]">verifyBrandListing</td> 
   <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="93938a">  <td>22/03/03 10:06:56</td>   <td>-7821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CategoryProductTest.verifySubCategorySearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.CategoryProductTest@35cabb2a]">verifySubCategorySearch</td> 
+<tr bgcolor="93938a">  <td>22/03/03 14:08:04</td>   <td>-7261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrandProductTest.verifyBrandListing(java.lang.String,java.lang.String)[pri:0, instance:com.qa.testscripts.BrandProductTest@35cabb2a]">verifyBrandListing</td> 
   <td>main@593687897</td>   <td></td> </tr>
 </table>
