--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -42,30 +42,32 @@
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.qa.testrunner.TestRunner</td>
+<td>com.qa.testscripts.BrandProductTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>runScenario</td>
-<td>cucumber </td>
+<td>verifyProductCountUnderEachBrands</td>
+<td>regression integration brand </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAllBrandsAreListed</td>
+<td>regression integration brand </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyBrandListing</td>
+<td>regresssion brand frontend </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>setUpClass</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -75,10 +77,6 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDownClass</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>com.qa.testscripts.CategoryProductTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -88,17 +86,17 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifySubCategorySearch</td>
-<td>category frontend </td>
+<td>regression category frontend </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyAllSubCategoryIsShown</td>
-<td>category frontend </td>
+<td>regression category frontend </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyAllCategoryIsShown</td>
-<td>category frontend </td>
+<td>regression category frontend </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -109,10 +107,6 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
@@ -125,32 +119,37 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyLoginWithEmptyEmailCredential</td>
-<td>&nbsp;</td></tr>
+<td>login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyLoginShowsProperLoggedInMessage</td>
-<td>&nbsp;</td></tr>
+<td>regression login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyLoginWithValidCredential</td>
-<td>&nbsp;</td></tr>
+<td>regression login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyLoginWithInvalidCredentials</td>
-<td>&nbsp;</td></tr>
+<td>login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyDeleteLogin</td>
-<td>&nbsp;</td></tr>
+<td>login </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyRegistartionWithInvalidEmail</td>
-<td>frontend </td>
+<td>login frontend </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyLoginWithEmptyCredentials</td>
-<td>frontend </td>
+<td>login frontend </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -161,10 +160,6 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
