--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,13 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.qa.testscripts.LoginTest.verifyLoginWithEmptyCredentials</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyDeleteLogin</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyRegistartionWithInvalidEmail</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyLoginWithInvalidCredentials</td></tr>
+<tr><td>com.qa.testscripts.LoginTest.verifyLoginWithEmptyEmailCredential</td></tr>
+<tr><td>com.qa.testscripts.RegistrationTest.verifyRegistrationWithExistingUser</td></tr>
+<tr><td>com.qa.testscripts.RegistrationTest.verifyPageTitle</td></tr>
+<tr><td>com.qa.testscripts.RegistrationTest.verifySignUpWithEmptyCredentials</td></tr>
+<tr><td>com.qa.testscripts.RegistrationTest.verifyRegistartionWithInvalidEmail</td></tr>
+<tr><td>io.cucumber.testng.AbstractTestNGCucumberTests.runScenario<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Runs Cucumber Scenarios</i></td></tr>
+<tr><td>com.qa.testscripts.BrandProductTest.verifyBrandListing</td></tr>
 </table>
